# shgo-rs-native

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  cbindgen.toml  compare_parallel_perf.py  shgo_fable_recommendations.md
benches/: benchmarks.rs
examples/: ackley.rs  basic_rosenbrock.rs  benchmark_comparison.rs  benchmark_scipy.py  compare_benchmarks.py  compare_with_python.rs  difficult_benchmark.rs  eggholder.rs  fix_benchmark.rs  flamegraph_target.rs  knn_vs_delaunay.rs  memory_breakdown.rs  memory_perf_harness.rs  parallel_benchmark.rs  parallel_stress_test.rs  performance_benchmark.rs  rastrigin.rs  schwefel_high_sample.rs  sphere_benchmark.rs
examples_cpp/: example.c  example.cpp  example_c  example_cpp
include/: shgo.h  shgo.hpp
src/: alloc_tracker.rs  complex.rs  coordinates.rs  error.rs  ffi.rs  lib.rs  local_opt.rs  shgo.rs  sobol.rs  vertex.rs
tests/: cross_validation.rs  generate_e2e_fixtures.py  generate_fixtures.py  scipy_reference.py
tests/fixtures/: end_to_end_tests.json
